# archiver-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  archiver.toml
.config/: nextest.toml
.github/workflows/: cross-platform.yml  rust.yml
crates/archiver-api/: Cargo.toml
crates/archiver-api/src/: cluster.rs  errors.rs  lib.rs  mgmt.rs  pv_data.rs  pv_input.rs  pva.rs  security.rs  state.rs  ui.rs  value_json.rs
crates/archiver-api/src/dto/: mgmt.rs  mod.rs
crates/archiver-api/src/handlers/: health.rs  mod.rs
crates/archiver-api/src/handlers/mgmt/: aliases.rs  config_io.rs  engine.rs  legacy.rs  mod.rs  operations.rs  p2.rs  pv_control.rs  pv_query.rs  reports.rs  system.rs  type_info.rs
crates/archiver-api/src/services/: mod.rs  traits.rs
crates/archiver-api/src/services/fakes/: archiver_control.rs  cluster_router.rs  mod.rs  pv_repository.rs
crates/archiver-api/src/services/impls/: archiver_control.rs  cluster_router.rs  mod.rs  registry_repo.rs
crates/archiver-api/src/usecases/: abort_archiving.rs  archive_pv.rs  change_parameters.rs  delete_pv.rs  get_pv_details.rs  import_config.rs  mod.rs
crates/archiver-api/static/: mgmt.html  pvdata.html
crates/archiver-bluesky/: Cargo.toml
crates/archiver-bluesky/src/: consumer.rs  documents.rs  lib.rs  pv_mapper.rs
crates/archiver-core/: Cargo.toml
crates/archiver-core/src/: config.rs  flags.rs  lib.rs  registry.rs  types.rs
crates/archiver-core/src/etl/: decimation.rs  executor.rs  mod.rs
crates/archiver-core/src/retrieval/: merge.rs  mod.rs  query.rs
crates/archiver-core/src/retrieval/postprocessors/: counts.rs  last_sample.rs  mod.rs  statistics.rs
crates/archiver-core/src/storage/: mod.rs  partition.rs  tiered.rs  traits.rs
crates/archiver-core/src/storage/plainpb/: codec.rs  mod.rs  reader.rs  search.rs  writer.rs
crates/archiver-engine/: Cargo.toml
crates/archiver-engine/src/: channel_manager.rs  lib.rs  policy.rs  sampling.rs
crates/archiver-proto/: Cargo.toml  build.rs
crates/archiver-proto/src/: lib.rs
crates/archiver-proto/src/proto/: EPICSEvent.proto
src/: main.rs  supervisor.rs
tests/: api_cluster.rs  api_failover.rs  api_mgmt.rs  api_pva.rs  api_retrieval.rs  integration.rs  plainpb_compat.rs  write_loop_failure.rs
