[workspace]
members = [
    "crates/archiver-proto",
    "crates/archiver-core",
    "crates/archiver-engine",

    "crates/archiver-api",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/physwkim/archiver-rs"
authors = ["Sang Woo Kim"]
readme = "README.md"

[workspace.dependencies]
# Protobuf
prost = "0.14"
prost-build = "0.14"
protox = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
axum = "0.8"
hyper = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"


# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Config
toml = "0.8"

# Concurrent data structures
dashmap = "6"

# Async trait
async-trait = "0.1"

# Security
subtle = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }

# Stream utilities
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

# SQLite
rusqlite = { version = "0.34", features = ["bundled"] }

# EPICS Channel Access
epics-rs = { version = "0.13.0", features = ["pva"] }

# URL encoding
urlencoding = "2"

# Futures combinators
futures = "0.3"

# Testing
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

# Internal crates
archiver-proto = { path = "crates/archiver-proto", version = "0.2.0" }
archiver-core = { path = "crates/archiver-core", version = "0.2.0" }
archiver-engine = { path = "crates/archiver-engine", version = "0.2.0" }
archiver-api = { path = "crates/archiver-api", version = "0.2.0" }

[package]
name = "archiver"
version.workspace = true
edition.workspace = true
license.workspace = true
# Root binary — not published to crates.io. The library crates
# (archiver-proto, archiver-core, archiver-engine, archiver-api) are
# the public surface; end users install the binary from the GitHub
# release rather than `cargo install archiver`.
publish = false

[dependencies]
archiver-core = { workspace = true }
archiver-engine = { workspace = true }

archiver-api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
rustls = { workspace = true }
epics-rs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
archiver-api = { workspace = true, features = ["test-support"] }
archiver-core = { workspace = true }
archiver-engine = { workspace = true }
archiver-proto = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
urlencoding = { workspace = true }
epics-rs = { workspace = true }
