[workspace]
members = [
    "crates/archiver-proto",
    "crates/archiver-core",
    "crates/archiver-engine",

    "crates/archiver-api",
]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/physwkim/archiver-rs"
authors = ["Sang Woo Kim"]
readme = "README.md"

[workspace.dependencies]
# Protobuf
prost = "0.14"
prost-build = "0.14"
protox = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
axum = "0.8"
hyper = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"


# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Config
toml = "0.8"

# Concurrent data structures
dashmap = "6"

# Async trait
async-trait = "0.1"

# Security
subtle = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }

# Stream utilities
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

# SQLite
rusqlite = { version = "0.34", features = ["bundled"] }

# EPICS Channel Access
epics-rs = { version = "0.16.0", features = ["pva"] }

# URL encoding
urlencoding = "2"

# Futures combinators
futures = "0.3"

# Testing
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

# Internal crates
archiver-proto = { path = "crates/archiver-proto", version = "0.3.2" }
archiver-core = { path = "crates/archiver-core", version = "0.3.2" }
archiver-engine = { path = "crates/archiver-engine", version = "0.3.2" }
archiver-api = { path = "crates/archiver-api", version = "0.3.2" }

[package]
name = "epics-archiver"
# Decoupled from workspace.package.version so the binary can ship
# bug-fix releases (e.g. CLI ergonomics) without churning the four
# library crates whose code is unchanged. For v0.3.2 the binary and
# the four library crates re-align on a single version (epics-rs
# 0.16.0 dep bump touches every crate); future binary-only patch
# releases may diverge again.
version = "0.3.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description = "EPICS Archiver Appliance — Rust port. Channel-Access / pvAccess archiver with HTTP retrieval API and 3-tier PlainPB storage."
# `archiver-rs` and `archiver` are both squatted on crates.io by
# unrelated crates, so the binary ships under `epics-archiver`.
# `cargo install epics-archiver` installs the `epics-archiver`
# command. The library half of this workspace (archiver-proto,
# archiver-core, archiver-engine, archiver-api) keeps the
# `archiver-` prefix because those names were available.

[[bin]]
name = "epics-archiver"
path = "src/main.rs"

[dependencies]
archiver-core = { workspace = true }
archiver-engine = { workspace = true }

archiver-api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
rustls = { workspace = true }
epics-rs = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
archiver-api = { workspace = true, features = ["test-support"] }
archiver-core = { workspace = true }
archiver-engine = { workspace = true }
archiver-proto = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
urlencoding = { workspace = true }
epics-rs = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
