[package]
name = "archiver-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HTTP REST API (mgmt + retrieval) and cluster routing for the Rust port of the EPICS Archiver Appliance"

[features]
test-support = []

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
archiver-core = { workspace = true }
archiver-proto = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
archiver-engine = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
urlencoding = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
async-trait = { workspace = true }
subtle = { workspace = true }
epics-rs = { workspace = true }
