[package]
name = "archiver-bluesky"
version.workspace = true
edition.workspace = true

[dependencies]
archiver-core = { workspace = true }
rdkafka = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
