[package]
name = "archiver-core"
version.workspace = true
edition.workspace = true

[dependencies]
archiver-proto = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
rusqlite = { workspace = true }
metrics = { workspace = true }
