[package]
name = "archiver-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Storage (PlainPB), ETL, retrieval, and PV registry for the Rust port of the EPICS Archiver Appliance"

[dependencies]
archiver-proto = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
rusqlite = { workspace = true }
metrics = { workspace = true }
