[package]
name = "archiver-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Protobuf types (EPICSEvent, PayloadInfo) for the Rust port of the EPICS Archiver Appliance"

[dependencies]
prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protox = { workspace = true }
